# Project-Kelompok-5

./: .gitignore  CMakeLists.txt  README.md  RestaurantSystem.pro  code_review.html  laporan_review_uas.html  mainwindow.ui  panduan_penggunaan.html  tutor.md
restaurant_system/: RestaurantSystem.pro
restaurant_system/src/: datastructures.h
src/: datastructures.h  main.cpp  mainwindow.cpp  mainwindow.h
